[package]
name = "runner"
version = "0.1.0"
authors = ["zskamljic <zan.skamljic@equaleyes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode = { path = "../bencode" }
directories = { path = "../directories" }
watcher = { path = "../watcher" }